Fix lunch hour not visible on mobile

--- a/src/Components/ScheduleItem/index.css
+++ b/src/Components/ScheduleItem/index.css
@@ -206,7 +206,10 @@
         .schedule-item--info {
             --schedule-bar-color: rgba(0, 0, 0, 0.05);
             background-color: var(--primary-color);
-            color: var(--white);
+
+            @media (--tablet) {
+                color: var(--white);
+            }
         }
     }
 }
